# 0pack

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.html
doc/: Noted.md  TODO.md
html/: 0pack.html  img0.html  img1.html  img10.html  img11.html  img12.html  img13.html  img14.html  img15.html  img16.html  img2.html  img3.html  img4.html  img5.html  img6.html  img7.html  img8.html  img9.html  text0.html  text1.html  text10.html  text11.html  text12.html  text13.html  text14.html  text15.html  text16.html  text2.html  text3.html  text4.html  text5.html  text6.html  text7.html  text8.html  text9.html
include/: Loader.hpp  Packer.hpp  RegisterManager.hpp  Utils.hpp
src/: CMakeLists.txt  Loader.cpp  Packer.cpp  RegisterManager.cpp  Utils.cpp  main.cpp
tests/: fork-payload.fasm  hello_world.fasm  radar2.sh  shellcode.py  test-0pack.sh  test.sh
tests/src/: build_test.sh  setup_handler.rc  test.c
